@@ -1,3 +1,8 @@
+Static site (2020-06-11 shi)
+==============================
+Switch to tab depending upon hash at page load
+
+
 Static site (2020-05-15 shi)
 ==============================
 Update footer with dquery link
